Update and rename inicio.html to index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<!--Menú de navegación-->
 	<header class="header">
 		<div class="logo">
-			<a href="inicio.html"><img src="img/Logos/Logo_PNG_Blanco.png" alt="logo de la marca"></a>
+			<a href="index.html"><img src="img/Logos/Logo_PNG_Blanco.png" alt="logo de la marca"></a>
 		</div>
 		<nav>
 			<ul class="nav-links">
@@ -281,17 +281,17 @@
 
 	<!--Pie de página-->
 	<footer>
-		<a href="inicio.html"><img src="img/Logos/Logo_PNG_Blanco.png" alt="Logo" class="logo"></a>
+		<a href="index.html"><img src="img/Logos/Logo_PNG_Blanco.png" alt="Logo" class="logo"></a>
 		<div class="redes">
 			<a class="iconos-redes" href="https://wa.me/573123716032" target="_blank"></a>
 			<a class="iconos-redes" href="https://www.instagram.com/draalejandrabaron/" target="_blank"></a>
 			<a class="iconos-redes" href="mailto:draalejandrabaron@gmail.com"></a>
 		</div>
 		<ul class="contenido-footer">
-			<li class="item"><a href="sedes.html">Sedes</a></li>
-			<li class="item"><a href="inicio.html#contacto">Contacto</a></li>
+			<li class="item"><a href="#">Sedes</a></li>
+			<li class="item"><a href="inndex.html#contacto">Contacto</a></li>
 		</ul>
-		<span class="copyright">&copy;Laura Alejandra Barón Malagón 2023 | Derechos reservados</span>
+		<span class="copyright">&copy;Laura Alejandra Barón Malagón 2024 | Derechos reservados</span>
 	</footer>
 	</div>
 	
