--- a/envio_form_contacto.html
+++ b/envio_form_contacto.html
@@ -18,21 +18,21 @@
 
 	<h2>¿Qué deseas hacer?</h2>
 	<div class="btn">
-		<a href="inicio.html"><button class="btn-1">Ir al inicio.</button></a>
-		<a href="pide_tu_cita.html"><button class="btn-2">Agendar cita.</button></a>
+		<a href="index.html"><button class="btn-1">Ir al inicio.</button></a>
+		<a href="index.html"><button class="btn-2">Agendar cita.</button></a>
 	</div>
 
 	<!--Pie de página-->
 	<footer>
-		<a href="inicio.html"><img src="img/Logos/Logo_PNG_Blanco.png" alt="Logo" class="logo"></a>
+		<a href="index.html"><img src="img/Logos/Logo_PNG_Blanco.png" alt="Logo" class="logo"></a>
 		<div class="redes">
 			<a class="iconos-redes" href="https://wa.me/573123716032" target="_blank"></a>
 			<a class="iconos-redes" href="https://www.instagram.com/draalejandrabaron/" target="_blank"></a>
 			<a class="iconos-redes" href="mailto:draalejandrabaron@gmail.com"></a>
 		</div>
 		<ul class="contenido-footer">
-			<li class="item"><a href="sedes.html">Sedes</a></li>
-			<li class="item"><a href="inicio.html#contacto">Contacto</a></li>
+			<li class="item"><a href="#">Sedes</a></li>
+			<li class="item"><a href="index.html#contacto">Contacto</a></li>
 		</ul>
 		<span class="copyright">&copy;Laura Alejandra Barón Malagón 2023 | Derechos reservados</span>
 	</footer>
