--- a/index.html
+++ b/index.html
@@ -7,22 +7,16 @@
 	<!--Icono pestaña-->
 	<link rel="icon" href="img/Logos/Logo_PNG_Blanco.png">
 	<!--Conexión CSS-->
-	<link rel="stylesheet" type="text/css" href="css\inicio.css">
+	<link rel="stylesheet" type="text/css" href="css\index.css">
 	<!--Conexión Java Script-->
 	<script src="script.js"></script>
 	<!--Conexión CSS y jQuery para slider de sección estudios-->	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script> <script src="sss/sss.min.js"></script> <link rel="stylesheet" href="sss/sss.css" type="text/css" media="all"> <script>jQuery(function($) {$('.slider-estudios').sss();});</script>	
-	<!--Conexión logos y Java Script para galería-->
-	<script src="js/inicio.js" defer></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 	<!--Conexión Normalize-->
 	<link rel="stylesheet" href="css\normalize.css">
 	<!--Conexión Boostrap-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>	
-	<!--libreria y conexión Font Awesome para slider de sección galería-->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />    
-	<script type="module" src="https://cdn.jsdelivr.net/npm/@justinribeiro/lite-youtube@1.5.0/lite-youtube.js"></script>
 </head>
 <body>
 	
@@ -46,7 +40,7 @@
 				<img src="img/Header/instagram_blanco.png">				
 			</a>
 
-			<a class="log-in" href="dashboard.html">
+			<a class="log-in" href="#">
 				<img src="img/Header/login_blanco.png">				
 			</a>
 		</div>		
@@ -59,8 +53,8 @@
 			<h1>Alejandra Barón</h1>
 			<h2>Odontología Digital y Estética.</h2>			
 			<div class="btn">
-				<a href="pide_tu_cita.html"><button class="btn-1">Pide tu cita.</button></a>
-				<a href="medios_de_pago.html"><button class="btn-2">Medios de pago.</button></a>
+				<a href="#"><button class="btn-1">Pide tu cita.</button></a>
+				<a href="#"><button class="btn-2">Medios de pago.</button></a>
 			</div>
 		</div>		
 	</section>
