--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<!--Sobre mi-->
 	<section class="sobre-mi">				
 			<div class="imagen">
-				<img src="img/Laura/Laura Sobre mi.png">
+				<img src="img\Laura\Laura Sobre mi.png">
 			</div>
 			<div class="contenido">
 				<h1>Sobre mi</h1>
